--- a/css/dark.css
+++ b/css/dark.css
@@ -28,3 +28,11 @@ p {
   line-height: 1.5;
   margin-bottom: 20px;
 }
+
+.image {
+    width: 80%;
+    max-width: 600px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(169, 95, 251, 0.8);
+    margin-bottom: 20px;
+  }
