--- a/css/dark.css
+++ b/css/dark.css
@@ -21,6 +21,7 @@ body {
   justify-content: center;
   width: 100%;
   max-width: 600px;
+  text-align: center;
 }
 
 h1 {
@@ -37,6 +38,13 @@ p {
   max-width: 600px;
   line-height: 1.5;
   margin-bottom: 20px;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .image {
@@ -57,6 +65,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 label {
@@ -74,11 +83,13 @@ input[type="password"] {
   background: #1a1a1a;
   color: #a95ffb;
   font-size: 1rem;
+  text-align: center;
 }
 
 .checkbox {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-top: 10px;
 }
 
