--- a/css/dark.css
+++ b/css/dark.css
@@ -106,6 +106,7 @@ input[type="password"] {
   text-transform: uppercase;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  font-family: 'Metamorphous', serif;
 }
 
 .submit-btn:hover {
